# reference_apps

./: .gitignore  inf_server_rust.dockerfile
X_Agent/: .env.example  README.md  abi.json  agent.py  contract_handler.py  logger.py  model.py  pyproject.toml  twitter_handler.py  utils.py
fingerprinting_server/: Cargo.toml  README.md  TEE_setup.md  config.toml  config_tee.toml  current_config_hash.txt  fingerprinting_server.dockerfile
fingerprinting_server/src/: lib.rs  main.rs
fingerprinting_server/tests/: client.rs  config.json
inference_server/: Cargo.toml  README.md
inference_server/src/: lib.rs  main.rs
inference_server/tests/: client.rs
llamacpp_bindings/: Cargo.toml  README.md
llamacpp_bindings/src/: lib.rs
model_converter/: README.md  convert_to_gguf.sh
