[workspace]

[package]
name = "fingerprinting_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.100"
tokio-stream = "0.1.16"
config = "0.15.6"
lazy_static = "1.4.0"
clap = { version = "4.5.27", features = ["derive"] }

[[bin]]
name = "fingerprinting_client"
path = "tests/client.rs"