[workspace]

[package]
name = "inference_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9"}
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.100"
llamacpp_bindings = { path = "../llamacpp_bindings" }
serde = "1.0.215"
rand = "0.8.5"
clap = "4.5.27"

[[bin]]
name = "inference_client"
path = "tests/client.rs"

